--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,5 @@
 services:
+
     sonata.admin.braunedigital.mail.mail:
         class: BrauneDigital\MailBundle\Admin\MailAdmin
         tags:
@@ -9,6 +10,7 @@ services:
             - BrauneDigitalMailBundle:MailCrud
         calls:
             - [ setTranslationDomain, [BrauneDigitalMailBundle]]
+
     sonata.admin.braunedigital.mail.mail_template:
         class: BrauneDigital\MailBundle\Admin\MailTemplateAdmin
         tags:
@@ -23,3 +25,9 @@ services:
     braunedigital.mail.service.mail:
         class: BrauneDigital\MailBundle\Service\MailService
         arguments: [@service_container, @templating]
+
+    braunedigital.mail.event.scubscriber:
+        class: BrauneDigital\MailBundle\EventListener\MailSubscriber
+        arguments: [@service_container]
+        tags:
+            - { name: doctrine.event_subscriber, connection: default }
