--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,5 +1,9 @@
-services:
+parameters:
+    braunedigital.mail.service.layouts:
+        password_reset: ApplicationAppBundle:Mail:Resetting/resetPassword.html.twig
+        confirm: ApplicationAppBundle:Mail:Registration/confirm.html.twig
 
+services:
     sonata.admin.braunedigital.mail.mail:
         class: BrauneDigital\MailBundle\Admin\MailAdmin
         tags:
@@ -24,7 +28,7 @@ services:
 
     braunedigital.mail.service.mail:
         class: BrauneDigital\MailBundle\Service\MailService
-        arguments: [@service_container, @templating]
+        arguments: [@service_container, @templating, '%braunedigital.mail.service.layouts%']
 
     braunedigital.mail.event.scubscriber:
         class: BrauneDigital\MailBundle\EventListener\MailSubscriber
