--- a/Resources/config/doctrine/MailTemplateTranslation.orm.yml
+++ b/Resources/config/doctrine/MailTemplateTranslation.orm.yml
@@ -17,4 +17,18 @@ BrauneDigital\MailBundle\Entity\MailTemplateTranslation:
             unique: false
             nullable: true
             precision: 0
+        senderName:
+            type: string
+            scale: 0
+            length: 255
+            unique: false
+            nullable: false
+            precision: 0
+        senderMail:
+            type: string
+            scale: 0
+            length: 255
+            unique: false
+            nullable: false
+            precision: 0
     lifecycleCallbacks: {  }
