--- a/Resources/config/doctrine/MailTemplateTranslation.orm.yml
+++ b/Resources/config/doctrine/MailTemplateTranslation.orm.yml
@@ -1,7 +1,17 @@
 BrauneDigital\MailBundle\Entity\MailTemplateTranslation:
     type: entity
     table: mail_templates_translation
-    id: {  }
+    id:
+        id:
+            type: integer
+            scale: 0
+            length: null
+            unique: false
+            nullable: false
+            precision: 0
+            id: true
+            generator:
+                strategy: IDENTITY
     fields:
         subject:
             type: string
