--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -2,10 +2,11 @@ parameters:
     braunedigital.mail.service.template_searcher.class: "BrauneDigital\MailBundle\Service\TemplateSearcher"
     braunedigital.mail.service.template_searcher.filter: "*.html.twig"
     braunedigital.mail.service.template_searcher.base_dir: "Resources/views"
+    braunedigital.mail.admin.mail.class: "BrauneDigital\MailBundle\Admin\MailAdmin"
 
 services:
     sonata.admin.braunedigital.mail.mail:
-        class: 'BrauneDigital\MailBundle\Admin\MailAdmin'
+        class: '%braunedigital.mail.admin.mail.class%'
         tags:
             - { name: sonata.admin, manager_type: orm, group: "Mails", label: "Mails" }
         arguments:
